--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,3 +2,5 @@ node_modules
 .env
 images
 certificate
+.$Diagrammes-relations-SQL-entre-tables.drawio.bkp
+Diagrammes-relations-SQL-entre-tables.drawio
