Config Back-end pour PostgreSQL

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,3 +4,5 @@ images
 certificate
 .$Diagrammes-relations-SQL-entre-tables.drawio.bkp
 Diagrammes-relations-SQL-entre-tables.drawio
+config
+models
