--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
         "nodemon": "^2.0.16",
         "password-validator": "^5.2.1",
         "pg": "^8.7.3",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.19.2",
         "validator": "^13.7.0"
     }
 }
