Changement de la route + contrôleurs pour les commentaires de posts → CRUD pour les commentaires d'un post

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,3 +4,4 @@ images
 certificate
 .$Diagrammes-relations-SQL-entre-tables.drawio.bkp
 Diagrammes-relations-SQL-entre-tables.drawio
+Diagramme-fonctionnement-likes.drawio
