--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "express-rate-limit": "^6.4.0",
         "helmet": "^5.0.2",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.4",
